syntax = "proto2";

package test_case_for_blueprint;

message TestRequest {
    optional string value = 1;
}

message TestResponse {
    optional string value = 2;
}
